# paltaforma

./: .dockerignore  .gitignore  Arquitectura_Plataforma_DATCORR_v1.0.md  Arquitectura_Seguridad_v1.0.md  Dockerfile  Modelo_Datos_Global_v1.0.md  Plan_Unificacion_DATCORR_SIMCO.md  Plan_Unificacion_Servicios_DATCORR_SIMCO.md  Propuesta_Implementacion_Plataforma.md  Resumen_Unificacion_DATCORR_SIMCO.md  analisis_plan_railway_corregido.md  detener_plataforma.bat  detener_plataforma.ps1  iniciar_plataforma.bat  iniciar_plataforma.ps1  nuevo_plan_inif_user.md  plan_final_despliegue_railway.md  plan_railway_despliegue.md  plan_unif_usuar_roles.md  plan_unificacion_ejecucion.md  plan_unificacion_final.md  pyproject.toml  railway.json  requirements-platform.txt  requirements-web.txt  setup.py  test_despliegue.py
data_datcorr/: activar_permiso.py  backend.txt  base_datcorr.py  cargar_permisos.py  crear_superusuario.py  crear_tablas.py  estructura.txt  estructura_database.txt  inventario_bases.py  launcher_data.json  machete de cosas.txt  migrate_escribania.py  migrate_igpj.py  migrate_igpj_listado_nuevo.py  migrate_igpj_txt_listado.py  migrate_ips.py  migrate_maternidad.py  migrate_pediatrico.py  migrate_roles.py  migrate_roles_permisos.py  package-lock.json  plan_de_trabajo.md  requirements.txt  run_migrations.py  test_activar_desactivar.py  test_api.py  test_api_client.py  test_crear_usuario.py  test_crear_usuario_web.py  test_crud_usuarios.py  test_dao_postgres.py  test_estado_usuarios.py  test_listar_permisos.py  test_listar_usuarios.py  test_listar_usuarios_web.py  (+18 more)
(+362 files in other folders)
