[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "platformcore"
version = "0.1.0"
description = "Núcleo compartido de la plataforma DATCORR+SIMCO (Identity, Security, Audit)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "pydantic>=2.13.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "python-jose>=3.5.0",
    "python-dotenv>=1.2.0",
    "cryptography>=48.0.0",
    "starlette>=0.49.0",
    "python-multipart>=0.0.32",
]

[tool.setuptools.packages.find]
include = ["platformcore*"]
